--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/SmithWinter/Snack-Order#readme",
   "dependencies": {
+    "bulma": "^0.7.2",
     "mongodb": "^3.1.6"
   },
   "devDependencies": {
