--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "All things is mentioned in Snack Order release note",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "css-build": "node-sass --omit-source-map-url sass/mystyles.scss css/mystyles.css",
+    "css-watch": "npm run css-build -- --watch",
+    "start": "npm run css-watch"
   },
   "repository": {
     "type": "git",
@@ -21,6 +24,8 @@
     "mongodb": "^3.1.6"
   },
   "devDependencies": {
+    "bulma": "^0.7.2",
+    "node-sass": "^4.9.4",
     "nodemon": "^1.18.4"
   }
 }
