--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/SmithWinter/Snack-Order#readme",
   "dependencies": {
     "bulma": "^0.7.2",
+    "express": "^4.16.4",
     "mongodb": "^3.1.6"
   },
   "devDependencies": {
