--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/SmithWinter/Snack-Order#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "bulma": "^0.7.2",
     "express": "^4.16.4",
     "mongodb": "^3.1.6"
