--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.18.3",
     "bulma": "^0.7.2",
     "express": "^4.16.4",
+    "mocha": "^5.2.0",
     "mongodb": "^3.1.6"
   },
   "devDependencies": {
