--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mocha": "^5.2.0",
     "mongodb": "^3.1.6",
     "mongoose": "^5.3.10"
+    "multer": "^1.4.1"
   },
   "devDependencies": {
     "bulma": "^0.7.2",
