--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "bulma": "^0.7.2",
     "express": "^4.16.4",
     "mocha": "^5.2.0",
-    "mongodb": "^3.1.6"
+    "mongodb": "^3.1.6",
+    "multer": "^1.4.1"
   },
   "devDependencies": {
     "bulma": "^0.7.2",
