--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "bulma": "^0.7.2",
+    "errorhandler": "^1.5.0",
     "express": "^4.16.4",
     "mocha": "^5.2.0",
     "mongodb": "^3.1.6",
     "mongoose": "^5.3.10"
+    "node-notifier": "^5.3.0"
   },
   "devDependencies": {
     "bulma": "^0.7.2",
