--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "express": "^4.16.4",
     "mocha": "^5.2.0",
     "mongodb": "^3.1.6",
-    "mongoose": "^5.3.10"
+    "mongoose": "^5.3.10",
     "node-notifier": "^5.3.0"
   },
   "devDependencies": {
