--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "bulma": "^0.7.2",
     "font-awesome": "^4.7.0",
+    "bulma-extensions": "^4.0.0",
+    "moment": "^2.22.2",
     "node-sass": "^4.10.0",
     "react": "^16.6.3",
     "react-bulma-components": "^2.3.0",
@@ -12,6 +14,7 @@
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
+    "styled-components": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
