--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "bulma": "^0.7.2",
+    "cors": "^2.8.5",
     "errorhandler": "^1.5.0",
     "express": "^4.16.4",
     "mocha": "^5.2.0",
@@ -33,6 +34,6 @@
   "devDependencies": {
     "bulma": "^0.7.2",
     "node-sass": "^4.9.4",
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.7"
   }
 }
