--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "font-awesome": "^4.7.0",
+    "node-sass": "^4.10.0",
     "react": "^16.6.3",
+    "react-bulma-components": "^2.3.0",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
