--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "errorhandler": "^1.5.0",
     "express": "^4.16.4",
     "mocha": "^5.2.0",
