--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bulma": "^0.7.2",
     "font-awesome": "^4.7.0",
-    "bulma-extensions": "^4.0.0",
     "moment": "^2.22.2",
     "node-sass": "^4.10.0",
     "react": "^16.6.3",
-    "react-bulma-components": "^2.3.0",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
