--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-redis": "^3.4.0",
     "cors": "^2.8.5",
     "errorhandler": "^1.5.0",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "mocha": "^5.2.0",
     "mongodb": "^3.1.6",
     "mongoose": "^5.3.11",
