--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.1.3",
+    "connect-redis": "^3.4.0",
+    "express-session": "^1.15.6",
     "font-awesome": "^4.7.0",
-    "node-sass": "^4.11.0",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
+    "node-sass": "^4.11.0",
     "popper.js": "^1.14.3",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
