--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ pull_git:
   - git stash
   - git pull https://kieutridang:Ktd93Nth91@github.com/SmithWinter/Snack-Order.git dev
   - cd client
+  - docker login -u kieutridang -p Tridang93
   - docker run build -t snack-order-client
 
 deploy_production:
