--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ stages:
 pull_git:
  stage: build
  script:
+  - sudo usermod -aG docker gitlab-runner
   - git checkout dev
   - git stash
   - git pull https://kieutridang:Ktd93Nth91@github.com/SmithWinter/Snack-Order.git dev
