--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ pull_git:
   - git stash
   - git pull https://kieutridang:Ktd93Nth91@github.com/SmithWinter/Snack-Order.git dev
   - cd client
+  - rm -rf node_modules
   - npm install
   - npm run build
 
@@ -19,4 +20,3 @@ deploy_production:
   - cd ../server
   - npm install
   - npm start
-  
