add trigger manually

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,3 +20,8 @@ deploy_production:
   - cd ../server
   - npm install
   - npm start
+
+trigger_build:
+  stage: build
+  script:
+    - "curl -X POST -F token=TOKEN -F ref=REF_NAME https://gitlab.com/api/v4/projects/10030864/trigger/pipeline"
