--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,8 @@
     "styled-components": "^4.1.1"
   },
   "scripts": {
-    "start": "REACT_APP_ENV=dev react-scripts start",
-    "build": "REACT_APP_ENV=production react-scripts build",
+    "start": "SET REACT_APP_ENV=dev & react-scripts start",
+    "build": "SET REACT_APP_ENV=production & react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
