--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "mongodb": "^3.1.6",
     "mongoose": "^5.3.11",
     "multer": "^1.4.1",
-    "node-notifier": "^5.3.0"
+    "node-notifier": "^5.3.0",
+    "node-schedule": "^1.3.1"
   },
   "devDependencies": {
     "node-sass": "^4.9.4",
