--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-paginate": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-toastify": "^4.5.1",
     "recompose": "^0.30.0",
     "styled-components": "^4.1.1"
   },
