--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "mocha": "^5.2.0",
     "mongodb": "^3.1.6",
     "mongoose": "^5.3.11",
+    "mongoose-paginate-v2": "^1.0.13",
     "multer": "^1.4.1",
     "node-notifier": "^5.3.0",
     "node-schedule": "^1.3.1"
