--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ pull_git:
   - sudo npm install create-react-app -g
   - git checkout dev
   - git stash
-  - git pull https://kieutridang:Ktd93Nth91@github.com/SmithWinter/Snack-Order.git dev
+  - git pull git@github.com:SmithWinter/Snack-Order.git dev
   - cd client
   - rm -rf node_modules
   - docker run build -t snack-order-client .
