--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ pull_git:
   - cd client
   - rm -rf node_modules
   - docker login -u kieutridang -p Tridang93
-  - docker run build -t snack-order-client .
+  - docker build -t snack-order-client .
   - CI=false npm run build
 
 deploy_production:
