--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "start": "SET REACT_APP_ENV=dev & react-scripts start",
-    "build": "SET REACT_APP_ENV=production & react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
