--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,12 +2,8 @@
 FROM node:11
 
 RUN pwd
-WORKDIR /usr/src/app
+ADD . /app
+WORKDIR /app
 
-ADD . /usr/src/app
-
-WORKDIR /usr/src/app/client
 RUN npm install
-RUN npm rebuild node-sass
-
 CMD [ "npm", "run", "build"]
