--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "deploy": "kill $(lsof -t -i :3000) ENV=production node app.js &"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
