--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "mongoose": "^5.3.11",
     "multer": "^1.4.1",
     "node-notifier": "^5.3.0",
-    "node-schedule": "^1.3.1"
+    "node-schedule": "^1.3.1",
+    "pm2": "^3.2.4"
   },
   "devDependencies": {
     "node-sass": "^4.9.4",
